# VCP-SDK

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  SECURITY.md  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  spec_amendment.yml
.github/workflows/: ci.yml  conformance.yml  deploy.yml
conformance/: README.md
conformance/adaptation/: context_encoding.json  context_encoding_extended.json  messaging.json  state_machine.json
conformance/extensions/: capability_negotiation.json  consensus_voting.json  personal_state.json  (+3 more)
docs/: CROSS_PROJECT_VCP_BRIDGE.md  VCP_IMPLEMENTATION_GUIDE.md  VCP_INTEGRATION.md  VCP_INTEGRATION_IMPLEMENTATION.md  VCP_INTEGRATION_PLAN.md  VCP_NEWCOMER_GUIDE.md  VCP_OVERVIEW.md  VCP_STATUS_REPORT.md
examples/: README.md  hooks_deployment.yaml
integrations/: __init__.py
python/: README.md  pyproject.toml  requirements.txt
python/src/api/: vcp.py
python/src/mcp/: run_vcp_server.sh  vcp_server.py
python/src/vcp/: __init__.py  audit.py  bundle.py  canonicalize.py  enforcement.py  injection.py  manifest.py  messaging.py  metrics.py  negotiation.py  orchestrator.py  privacy.py  revocation.py  skill_security.py  trust.py  types.py
python/src/vcp/adaptation/: __init__.py  context.py  redis_state.py  state.py
python/src/vcp/extensions/: __init__.py  competence.py  consensus.py  personal.py  relational.py  torch.py
python/src/vcp/hooks/: __init__.py  builtin.py  config.py  executor.py  registry.py  types.py
python/src/vcp/identity/: registry.py  token.py
python/src/vcp/semantics/: __init__.py  composer.py  csm1.py
python/tests/: conftest.py
python/tests/integration/: test_vcp_integration.py
python/tests/unit/: test_vcp_audit.py  test_vcp_bridge.py  test_vcp_enforcement.py  test_vcp_identity_registry.py  test_vcp_redis_state.py
python/tests/unit/api/: test_vcp_router.py
python/tests/unit/plugins/: test_vcp_adaptation_plugin.py
python/tests/vcp/: test_messaging.py  test_metrics.py  test_privacy.py  test_revocation.py  test_vectors.py
python/tests/vcp/adaptation/: test_context.py  test_state.py
python/tests/vcp/extensions/: test_consensus.py  test_negotiation.py  test_personal.py  test_relational.py  test_torch.py
python/tests/vcp/hooks/: test_hooks.py  test_hooks_config.py  test_hooks_integration.py
python/tests/vcp/identity/: __init__.py  test_namespace.py  test_registry.py  test_token.py
python/tests/vcp/semantics/: __init__.py  test_composer.py  test_csm1.py
rust/: Cargo.toml
rust/vcp-core/: Cargo.toml
rust/vcp-core/src/: composer.rs  context.rs  csm1.rs  error.rs  hooks.rs  identity.rs  lib.rs  negotiation.rs  orchestrator.rs  personal.rs  revocation.rs  situational.rs  transport.rs  trust.rs  types.rs
rust/vcp-core/src/extensions/: consensus.rs  mod.rs  personal.rs  relational.rs  torch.rs
rust/vcp-wasm/: Cargo.toml
rust/vcp-wasm/src/: lib.rs
schemas/: vcp-adaptation-context.schema.json  vcp-manifest-v1.schema.json  vcp-manifest-v2.schema.json  vcp-messaging-v2.0.schema.json  vcp-semantics-csm1.schema.json  vcp-welfare-signal.schema.json
specs/: VCP_PAPER_OUTLINE.md  VCP_SPECIFICATION_CANONICAL.md  VCP_SPECIFICATION_v1.0.md  VCP_SPECIFICATION_v1.0_COMPLETE.md
vcp-demo/: .gitignore  IMPLEMENTATION_NOTES.md  package-lock.json  package.json
webmcp/: README.md  package-lock.json  package.json  tsconfig.json
website/: README.md  package-lock.json  package.json  svelte.config.js  vite.config.ts
(+751 files in other folders)
