[package]
name = "vcp-core"
description = "Value Context Protocol (VCP) core types and parsing"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand = "0.8"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "2"
unicode-normalization = "0.1"

[dev-dependencies]
pretty_assertions = "1"
